035 ==> 137386 : Sort images in descending date order in album view.
036 ==> 210845 : Date interval search returns nothing if you specify the same date as interval.
037 ==> 210873 : Renaming in digiKam always uses advanced renaming.
038 ==> 210956 : Zoom slider looks not centered with Oxygen style.
039 ==> 211060 : Advanced rename: keep the pattern.
040 ==>

*********************************************************************************************************
digiKam 1.0.0-beta5 - Release date: 2009-10-05

NEW FEATURES:

General        : AdvancedRename utility is used throughout digiKam now (AlbumUI, CameraUI and BQM).
ImageEditor    : New menu option to switch image color space quickly.
ImageEditor    : Black and White converter: add standard Blue and Yellow-Green color filters.

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 193482 : XMP/IPTC fields in Batch Rename tool.
002 ==> 183435 : No more file manager at media:/camera.
003 ==> 200758 : digiKam, dolphin, dc is not in peripherals list.
004 ==> 206071 : Not reading image properties.
005 ==> 191113 : digiKam doesn't recognize images with colorspace AdobeRGB.
006 ==> 206487 : Unsharp mask algorithm in batch processing should equal the one in kipi.
007 ==> 206570 : Crashed when scrolling through thumbnails in edit mode.
008 ==> 206712 : Raw Import Tool: RGB (linear) provides gamma corrected output and should be named as such.
009 ==> 206857 : Unclear English in sentence.
010 ==> 149485 : Advanced image resize for the digiKam editor.
011 ==> 206426 : Default ICC profile locations reads the same directory twice.
012 ==> 203176 : Deleting 2 files still shows one afterwards.
013 ==> 205059 : The default path for image library is not localizable.
014 ==> 204084 : Showfoto claims that there are no images in directory that contains symlinks to images.
015 ==> 197817 : digiKam should utilize _icc_profile X property.